need to fix box spacing again, but otherwise done with desktop design

--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,9 @@ p {
   width: 48%;
   padding: 0 1%;
   padding-bottom: 20px;
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
 }
 
 .middle-content {
@@ -183,6 +186,9 @@ p {
 .middle-content h2 {
   padding: 0 2%;
   margin-bottom: 0;
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
 }
 
 .middle-content .boxes {
@@ -242,6 +248,9 @@ background-color: hotpink;
 
 .bottom-content .text-container {
   padding-right: 4%;
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
 }
 
 .bottom-content .text-container:last-child {
@@ -265,51 +274,67 @@ footer nav {
 footer nav a {
   color: white;
   text-decoration: none;
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
 }
 
+.lambda {
+  display: flex;
+  /* flex-wrap:wrap;*/
+  order: -1;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-top: 15px; /*17*/
+  margin-left: 103px;
+  position: relative;
+  top:20px;
+  left:40px;
+}
+
+.topnav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin-left: 150px;
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 600;
+  position: relative;
+  left: 200px;
+}
+
+.photo {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  margin-left: 100px;
+  margin-bottom:25px;
+  height: 150px;
+  width: 65%;
+  position: relative;
+  left:165px;
+
+}
+
+header {
+  border: 4px solid green;
+}
+
+body {
+  border: 2px solid red;
+  height:900px;
+}
+
+.container {
+  border: 3px solid blueviolet;
+  max-width: 950px;
+  height: 573px; /*height:710px*/
+  margin-top: 250px;
+  margin: auto;
+}
 @media (max-width: 768px) {
-  .lambda {
-    display: flex;
-    /* flex-wrap:wrap;*/
-    order: -1;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-top: 15px; /*17*/
-    margin-left: 103px;
-  }
-
-  .topnav a {
-    color: black;
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin-left: 150px;
-  }
-
-  .photo {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 40px;
-    margin-left: 100px;
-    height: 150px;
-    width: 800px;
-  }
-  header {
-    border: 4px solid green;
-    height: 800px;
-  }
-
-  body {
-    border: 2px solid red;
-  }
-
-  .container {
-    border: 3px solid blueviolet;
-    max-width: 850px;
-    height: 710px;
-    margin-top: 250px;
-    margin: auto;
-  }
-
+  
   .middle-content .boxes .boxA {
     background-color: teal;
 }
